<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">valentinktapp</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
<string name="lbl_60">$60</string>
<string name="lbl_credit_card">Credit card</string>
<string name="msg_already_have_yo">Already have you an account? Login</string>
<string name="lbl_user_name">User Name</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account? Signup</string>
<string name="lbl_3_january_1984">3 January 1984</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="msg_farm_at_your_fi">Farm at your fingertips</string>
<string name="lbl_order_placed">Order Placed!</string>
<string name="lbl_about">About</string>
<string name="lbl_signup">Signup</string>
<string name="lbl_prickly_pear">Prickly Pear</string>
<string name="lbl_from_5_inch">From 5 Inch</string>
<string name="lbl_log_out">Log out</string>
<string name="lbl_cardholder_name">Cardholder name</string>
<string name="msg_order_5541_arr">Order #5541 arriving today</string>
<string name="lbl_1m_ago">1m ago.</string>
<string name="lbl_size">SIZE</string>
<string name="msg_nike_sb_janoski">Nike SB Janoski QS Turbo 
Green Tie Dye Skate Shoes</string>
<string name="lbl_expiry_date">Expiry date</string>
<string name="lbl_afnan_jarabaa">Afnan Jarabaa</string>
<string name="lbl_water">WATER</string>
<string name="lbl_dose_media">Dose Media</string>
<string name="lbl_or_sign_up_with">or sign up with</string>
<string name="msg_agung_suka_fam">Agung suka  family</string>
<string name="lbl_scott_webb">Scott Webb</string>
<string name="lbl_enter_e_mail">Enter E-mail</string>
<string name="lbl_enter_password2">Enter password</string>
<string name="lbl_mong_bui">Mong Bui</string>
<string name="lbl_54_kg">54 kg</string>
<string name="lbl_outdoor">Outdoor</string>
<string name="msg_exclusive_offe">Exclusive 
Offer</string>
<string name="lbl_30">$ 30</string>
<string name="lbl_protein">Protein</string>
<string name="lbl_card_number">Card number</string>
<string name="msg_customized_seed">Customized seeds</string>
<string name="lbl_password">Password</string>
<string name="lbl_915">915</string>
<string name="lbl_37">$37</string>
<string name="lbl_just_dropped">Just Dropped</string>
<string name="lbl_mm_yyyy">MM   /   YYYY</string>
<string name="lbl_janda_bolong">Janda Bolong</string>
<string name="lbl_20">20 $</string>
<string name="lbl_35_40">35-40%</string>
<string name="lbl_of_use_and"> 
of use and </string>
<string name="msg_forget_password">Forget Password?</string>
<string name="lbl_23">$23</string>
<string name="lbl_genie">Genie</string>
<string name="lbl_recommendations">Recommendations</string>
<string name="lbl_25">25 $</string>
<string name="lbl_saved_for_later">Saved for later</string>
<string name="lbl_sansevieria">Sansevieria</string>
<string name="lbl_humidity">Humidity</string>
<string name="msg_the_monstera_ad">The Monstera Adansonii grows best in a well-draining Aroid mix using bark, perlite, peat moss, and charcoal. Keep your plant in bright indirect light and humidity . </string>
<string name="lbl_502">50%</string>
<string name="lbl_4_5">4,5</string>
<string name="lbl_feedback">Feedback</string>
<string name="lbl_4_9">4.9</string>
<string name="lbl_balance">Balance</string>
<string name="lbl_4_8">4,8</string>
<string name="msg_order_above_50">Order above $50 to get Free Delivery</string>
<string name="lbl_log_in">Log In</string>
<string name="lbl_e_mail">E-mail</string>
<string name="lbl_50ml">50ml</string>
<string name="lbl_4_3">4.3</string>
<string name="lbl_login2">Login</string>
<string name="lbl_get_started">Get Started</string>
<string name="lbl_ex_david_kim">ex. David Kim</string>
<string name="lbl_5_h">5\u201d h</string>
<string name="lbl_carbs">Carbs</string>
<string name="lbl_sign_up2">SIGN UP</string>
<string name="lbl_15">$ 15</string>
<string name="lbl_19">$19</string>
<string name="lbl_privacy_policy">privacy policy.</string>
<string name="lbl_jerome_bell">Jerome Bell</string>
<string name="lbl_greengenie">GreenGenie</string>
<string name="lbl_06_2024">06   /   2024</string>
<string name="lbl_temperature">TEMPERATURE</string>
<string name="msg_suggested_seed">Suggested Seed Package</string>
<string name="lbl_cacti">Cacti</string>
<string name="lbl_janda_bolong2">Janda Bolong </string>
<string name="lbl_add_to_cart">Add to Cart</string>
<string name="lbl_apple_pay">Apple Pay</string>
<string name="msg_checkout_detail">Checkout details</string>
<string name="lbl_3_items">3 items</string>
<string name="msg_5261_4141_0">5261   4141   0151   8472</string>
<string name="lbl_602">$ 60</string>
<string name="lbl_security">Security</string>
<string name="lbl_5_0">5,0</string>
<string name="lbl_welcome_back">Welcome Back</string>
<string name="lbl_conditions">CONDITIONS</string>
<string name="lbl_david_weber">David Weber</string>
<string name="msg_by_signing_up_y">by signing up you agree to our terms &amp; CONDITIONS 
of use and privacy policy.</string>
<string name="lbl_dried_flowers">Dried flowers</string>
<string name="lbl_152">$15</string>
<string name="msg_thank_you_for_c2">Thank you for choosing </string>
<string name="lbl_green">Green</string>
<string name="lbl_4_82">4.8</string>
<string name="lbl2">*************</string>
<string name="lbl3">&gt;</string>
<string name="lbl_home">Home</string>
<string name="lbl_ronald_richards">Ronald Richards</string>
<string name="msg_nutritional_sum">Nutritional Summary</string>
<string name="lbl_order_5542">Order #5542</string>
<string name="msg_order_5542_pla">Order #5542 Placed</string>
<string name="msg_your_plant_is_t">Your plant is thirsty</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_shopping_bag">Shopping Bag</string>
<string name="lbl_price">PRICE</string>
<string name="lbl_from_40">from 40$</string>
<string name="msg_including_vat">Including VAT (21%)</string>
<string name="lbl_apply_coupon">Apply Coupon</string>
<string name="lbl_dweber">DWeber</string>
<string name="lbl_edit_profile">Edit Profile</string>
<string name="lbl_eleanor_pena">Eleanor Pena</string>
<string name="msg_log_in_to_your">Log in to your account</string>
<string name="lbl_light">LIGHT</string>
<string name="msg_pay_for_the_ord">Pay for the order</string>
<string name="lbl_for_payment">For payment:</string>
<string name="lbl_when_ordering">When ordering</string>
<string name="msg_large_snake_zyl">Large Snake Zylanica</string>
<string name="lbl_plant_health">Plant Health </string>
<string name="msg_don_t_have_an_a2">Don\u2019t have an account?</string>
<string name="lbl_weight">Weight</string>
<string name="lbl_google">Google</string>
<string name="msg_your_plant_is_h">Your plant is healthy</string>
<string name="lbl_70_75">70-75</string>
<string name="lbl_sync">Sync</string>
<string name="lbl_plant_store">Plant Store</string>
<string name="lbl_3_4_digits">3-4 digits</string>
<string name="msg_shop_for_more">Shop for more $20</string>
<string name="lbl_terms">terms &amp; </string>
<string name="lbl_fat">Fat</string>
<string name="lbl_from_8_inch">From 8 Inch</string>
<string name="msg_0000_0000_0">0000   0000   0000    0000</string>
<string name="lbl_language">Language</string>
<string name="msg_thank_you_for_c">Thank you for choosing GreenGenie! 
Your order has been received 
and is on its way to you.</string>
<string name="lbl_104_6_calories">104.6 calories</string>
<string name="lbl_89_95_usd">$89.95 USD</string>
<string name="lbl_option_2">Option #2</string>
<string name="lbl_option_1">Option #1</string>
<string name="lbl_enter_password">Enter Password</string>
<string name="lbl_option_4">Option #4</string>
<string name="lbl_option_3">Option #3</string>
<string name="lbl_account">Account</string>
<string name="msg_already_have_yo2">Already have you an account?</string>
<string name="lbl_30m_ago">30m ago.</string>
<string name="lbl_10h_ago">10h ago.</string>
<string name="lbl_fruit_bundle_3">Fruit Bundle #3</string>
<string name="lbl_in_pots">In pots</string>
<string name="lbl_gram">gram</string>
<string name="lbl_overview">Overview</string>
<string name="lbl_7_5_kg">-7.5 kg</string>
<string name="lbl_total">Total</string>
<string name="lbl_today">Today</string>
<string name="msg_order_5540_rec">Order #5540 received</string>
<string name="msg_monstera_adanso2">Monstera Adansonii looks health</string>
<string name="lbl_delivery">Delivery</string>
<string name="msg_monstera_adans">Monstera 
Adansonii</string>
<string name="lbl_facebook">Facebook</string>
<string name="lbl_popularity">Popularity</string>
<string name="lbl">\?</string>
<string name="lbl_72_60">$72.60</string>
<string name="lbl_80">80%</string>
<string name="lbl_search">Search</string>
<string name="lbl_1">1</string>
<string name="lbl_2">2</string>
<string name="msg_bundle_of_fruit">Bundle of fruits containing different types of berries such as blueberry, strawberry, caneberry, etc.</string>
<string name="lbl_3">3</string>
<string name="lbl_move_to_cart">move to cart</string>
<string name="lbl_250ml">250ml</string>
<string name="lbl_9_7">9.7</string>
<string name="msg_by_signing_up_y2">by signing up you agree to our </string>
<string name="lbl_202">$ 20</string>
<string name="lbl_new_in">New in</string>
<string name="lbl_checkout">Checkout</string>
<string name="msg_get_your_1st_pl">Get your 1st plant
@ 60% off</string>
<string name="lbl_free_shipping">Free shipping</string>
<string name="msg_janda_bolong_is">Janda Bolong is thirsty</string>
<string name="lbl_echeveria">Echeveria</string>
<string name="lbl_all">All</string>
<string name="lbl_1_2">1.2</string>
<string name="lbl_monstera">Monstera </string>
<string name="msg_your_order_h">! 
Your order has been received 
and is on its way to you.</string>
<string name="lbl_for_1_portion">For 1 portion</string>
<string name="lbl_from_3_inch">From 3 Inch</string>
<string name="lbl_crops">Crops</string>
<string name="lbl_coupon_code">coupon code</string>
<string name="msg_monstera_adanso">Monstera Adansonii</string>
<string name="lbl_monstera_family">Monstera family</string>
<string name="lbl_indoor">Indoor</string>
<string name="lbl_cvv_cvc">CVV / CVC</string>
<string name="lbl_new_popular">New &amp; Popular</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
