<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.valentinkt.sunapp.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:gravity="start"
            android:id="@+id/imageRectangle495"
            android:layout_height="@dimen/_274pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_137pxh}"
            imageRes="@{@drawable/img_rectangle495}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle495"/>
        <ImageView android:id="@+id/imageGreenGenieLogoc"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_28pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="@dimen/_33pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_greengenielogoc"
            tools:ignore="ContentDescription" tools:src="@drawable/img_greengenielogoc"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGreenGenie"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtGreenGenie}"
            style="@style/txtQuicksandbold24" tools:text="@string/lbl_greengenie"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtWelcomeBack"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtWelcomeBack}"
            style="@style/txtPoppinssemibold30" tools:text="@string/lbl_welcome_back"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLogintoyour"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLogintoyour}"
            style="@style/txtPoppinsregular14" tools:text="@string/msg_log_in_to_your"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlable"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_101cornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtLable"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLable}"
                style="@style/txtPoppinsregular13" tools:text="@string/lbl_user_name"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtInputText"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_11pxh"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtInputText}"
                style="@style/txtPoppinsregular19" tools:text="@string/lbl_afnan_jarabaa"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlableOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_101cornerRadius">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnlableOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.89" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLableOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtLableOne}"
                    style="@style/txtPoppinsregular13" tools:text="@string/lbl_password"/>
                <FrameLayout android:id="@+id/frameStackpassword"
                    android:layout_height="@dimen/_28pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_110pxh">
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtPassword"
                        android:layout_gravity="top|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtPassword}"
                        style="@style/txtRobotoregular19" tools:text="@string/lbl2"/>
                    <View
                        android:background="@drawable/rectangle_gradient_s_teal_900_e_teal_901"
                        android:id="@+id/lineLineThree"
                        android:layout_gravity="bottom|end"
                        android:layout_height="@dimen/_25pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_1pxh"/>
                </FrameLayout>
            </LinearLayout>
            <ImageView android:id="@+id/imageEye"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginBottom="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="@dimen/_27pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_eye"
                tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtInputTextOne"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_78pxh"
            android:layout_marginStart="@dimen/_78pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_9pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtInputTextOne}"
            style="@style/txtPoppinsregular17" tools:text="@string/msg_forget_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogIn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@string/lbl_log_in"
            android:textAllCaps="false" style="@style/btnSolidRounded_5" tools:text="@string/lbl_log_in"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_66pxh"
            android:layout_marginStart="@dimen/_66pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtConfirmation}"
            style="@style/txtPoppinsregular15" tools:text="@string/msg_don_t_have_an_a"/>
    </LinearLayout>
</layout>
